--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@reduxjs/toolkit": "^1.7.1",
     "keen-slider": "^6.6.3",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-canvas-confetti": "^1.2.1",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.25.3"
+    "react-hook-form": "^7.25.3",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
