--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.25.0",
     "keen-slider": "^6.6.3",
     "next": "12.0.8",
     "react": "17.0.2",
