--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-canvas-confetti": "^1.2.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.3",
+    "react-quiz-component": "^0.3.9",
     "react-redux": "^7.2.6",
     "swr": "^1.2.0"
   },
