--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.5",
     "axios": "^0.25.0",
     "keen-slider": "^6.6.3",
+    "nanoid": "^4.0.0",
     "next": "12.0.8",
     "next-intl": "^2.4.0",
     "nextjs-progressbar": "^0.0.14",
